# django-cythonizer

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  check.py  checking_v2.py  cython_compatibility_report.txt  delete.py  pyproject.toml  r.txt  rename.py  requirements.txt  settings.yaml  setup.py  test_v3.py
.github/workflows/: python-publish.yml
Root/: settings.py  urls.py
cythonizer/: settings.yaml  setup.py
cythonizer/build_tools/: __init__.py  build_command.py  config.py  cython_compiler.py  file_operations.py  logging_setup.py  settings.yaml  spinner.py
cythonizer/management/commands/: cythoniz.py
cythonizer/management/commands/build_tools/: config.py  file_operations.py  logging_setup.py  settings.yaml  (+1 more)
cythonizer/old/: checking.py  checking_v2.py  setup.py
cythonzier/: apps.py  cython_compatibility_report.txt  generate_realistic_mockup_data.py  rename.py  setup.py
django_cython_project.egg-info/: SOURCES.txt  requires.txt  top_level.txt
employees/: models.py  serializers.py  urls.py  views.py
finance/: views.py
finance/migrations/: 0001_initial.py
log/: build_log_20240718_100417.txt  build_log_20240718_101119.txt  build_log_20240718_101149.txt  build_log_20240718_101315.txt  build_log_20240718_101806.txt  build_log_20240718_101937.txt  build_log_20240718_204916.txt  build_log_20240718_204925.txt  build_log_20240718_204927.txt  build_log_20240718_204931.txt  build_log_20240718_205350.txt  build_log_20240718_205740.txt  build_log_20240718_205821.txt  build_log_20240718_210018.txt  build_log_20240718_210403.txt  build_log_20240718_210620.txt  build_log_20240718_210936.txt  build_log_20240718_211354.txt  build_log_20240718_211940.txt  build_log_20240718_212016.txt  build_log_20240718_213708.txt  build_log_20240718_213727.txt  build_log_20240718_213808.txt  build_log_20240718_214638.txt  build_log_20240718_215005.txt  build_log_20240718_215406.txt  build_log_20240718_220149.txt  build_log_20240718_220449.txt  build_log_20240718_220550.txt  build_log_20240718_221755.txt  build_log_20240718_222858.txt  build_log_20240718_222947.txt  build_log_20240718_223752.txt  build_log_20240718_223951.txt
notifications/: models.py
notifications/migrations/: 0001_initial.py
projects/: models.py  serializers.py  urls.py
reporting/: models.py
src/cythonizer/: apps.py
src/cythonizer/build_tools/: build_command.py  config.py  cython_compiler.py  settings.yaml
time_tracking/: models.py  urls.py
(+1 files in other folders)
