[build-system]
requires = ["setuptools>=45", "wheel", "Cython==3.0.10", "PyYAML>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cythonizer"
version = "0.0.12"
description = "A Django package for Cythonizing Django projects"
readme = "README.md"
authors = [
    {name = "Salah Aldain Alhajj", email = "contact@salahaldain.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
]
keywords = ["django", "cython", "optimization", "performance", "compilation"]
dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework",
    "Cython==3.0.10",
    "PyYAML>=6.0.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/salah-alhajj/django-cythonizer"
Repository = "https://github.com/salah-alhajj/django-cythonizer.git"
"Bug Tracker" = "https://github.com/salah-alhajj/django-cythonizer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cythonizer*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"cythonizer" = ["build_tools/settings.yaml"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
ignore_missing_imports = true

[project.scripts]
django-cythonize = "cythonizer.management.commands.cythoniz:Command.handle"